<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ice"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragments.newpurchase.NewPurchaseFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/ic_save"
        android:tintMode="@color/white"
        app:backgroundTint="@color/brilliant_blue"
        app:layout_constraintBottom_toBottomOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/ic_bag"
        android:tintMode="@color/white"
        app:backgroundTint="@color/brilliant_blue"
        app:layout_constraintBottom_toTopOf="@+id/fabSave"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutProductName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_name_product"
        app:boxStrokeColor="@color/gray"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutProductPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutProductPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_price_product"
        app:boxStrokeColor="@color/gray"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutPurchaseName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutPurchaseName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_purchase_name"
        app:boxStrokeColor="@color/gray"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPurchaseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutProductName" />


</androidx.constraintlayout.widget.ConstraintLayout>